# svc-egress-mqtt-to-badge

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.infrastructure.yaml  docker-compose.services.yaml  mqtt_publish_gate.py  mqtt_publish_payload.py  pyproject.toml  redis_db_indexes.py  service_translate_kafka_mqtt.py
.circleci/: config.yml  workflows.yml
manifests/: egress-kafka-mqtt-to-badge.yaml  kustomization.yaml
metrics/: otel.py
mqtt_to_kafka/: datatypes.py
scripts/: configure_codeartifact.ps1
